Fixed: overflowing of title in examples

--- a/www/assets/sass/application.sass
+++ b/www/assets/sass/application.sass
@@ -53,6 +53,12 @@ $width: 1170px
 		.title
 			color: black
 			font-weight: bold
+			display: inline-block
+			width: 110px
+			height: 19px
+			overflow: hidden
+			text-overflow: ellipsis
+			white-space: nowrap
 
 		.duration
 			float: right
